# sfdo-template-helpers

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pyproject.toml.template  pytest.ini  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: test.yml
docs/: conf.py  index.rst  installation.rst
sfdo_template_helpers/: fields.py  logfmt_utils.py  slugs.py  urls.py
sfdo_template_helpers/admin/: middleware.py  pagination.py  permissions.py  serializers.py  views.py
sfdo_template_helpers/crypto/: __init__.py  base.py
sfdo_template_helpers/fields/: __init__.py  markdown.py  string.py
sfdo_template_helpers/oauth2/: adapter.py
sfdo_template_helpers/oauth2/salesforce/: provider.py  urls.py  views.py
sfdo_template_helpers/oauth2/salesforce/tests/: test_provider.py  test_views.py
sfdo_template_helpers/oauth2/tests/: test_adapter.py
tests/: models.py  settings.py  test_addresses.py  test_admin_middleware.py  test_admin_pagination.py  test_admin_permissions.py  test_admin_serializers.py  test_admin_views.py  test_crypto.py  test_fields.py  test_logfmt_utils.py  test_sfdo_template_helpers.py  test_slugs.py  urls.py
