[tool.poetry]
name = "sfdo-template-helpers"
version = "0.1.0"
description = "A set of Django helpers and utils used by sfdo-template projects."
authors = [
    "Christian Carter <cdcarter@gmail.com>",
    "Kit La Touche <kit@transneptune.net>",
]

[tool.poetry.dependencies]
python = "^3.6"
markdown = "^3.0"
bleach = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
coverage = "^4.5"
tox = "^3.5"
sphinx = "^1.8"
flake8 = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
